--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>BTL</name>
 	<description>Backend</description>
 	<properties>
-		<java.version>22</java.version>
+		<java.version>20</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -72,6 +72,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.12.5</version>
 		</dependency>
 	</dependencies>
 
