--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.username=quocsaiyan@gmail.com
-spring.mail.password=bbehtvxxrdhvryor
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust= smtp.gmail.com
